# study_foutain_and_rs_code

./: README.md  README_2.md  备注
stack/: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  TODO  channel.py  check_node.sh  config.example.yaml  configA.yaml  configB.yaml  configC.yaml  configD.yaml  configE.yaml  configF.yaml  configG.yaml  demo.cc  fin.in  readme.md  start_nodes.py  tags
stack/dev/: CMakeLists.txt  clientsocket.cc  serial.cc
stack/include/: app_datapackage.h  client.h  clientsocket.h  config.h  dap.h  driver.h  hsm.h  libev_tool.h  message.h  module.h  noncopyable.h  packet.h  routetable.h  sap.h  schedule.h  serial.h  singleton.h  timer.h  tools.h  trace.h  utils.h
stack/libs/: client.cc  libev_tool.cc  routetable.cc  tools.cc  trace.cc
stack/m0_all_pass/: configA.yaml  configB.yaml  configD.yaml  configE.yaml
stack/m1_line_route_5nodes/: configA.yaml  configB.yaml  configC.yaml  configD.yaml  configE.yaml
stack/m1_line_route_6nodes/: configA.yaml  configB.yaml  configC.yaml  configD.yaml  configE.yaml  configF.yaml
stack/m2_circle/: configA.yaml  configB.yaml  configC.yaml  configD.yaml  configE.yaml
stack/m3_star/: configA.yaml  configB.yaml  configC.yaml  configD.yaml  configE.yaml
stack/m4_T/: configA.yaml  configB.yaml  configC.yaml  configD.yaml  configE.yaml
stack/mac/: CMakeLists.txt  aloha.cc  aloha_special.cc  crc32.c  fama.cc  fountain_aloha.cc  new_aloha.cc
stack/net/: CMakeLists.txt  DrtPlus.cc  DrtPlusPlus.cc  Srt.cc  dab.cc  drt.cc  layer_three.cc  vbf.cc
stack/phy/: CMakeLists.txt  aquasent.cc  (+7 more)
(+2427 files in other folders)
